--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
+	<!--
+	****************    ************    ***    **    ***  ****************
+	****************  ****************  ***    **    ***  ****************
+	      ****        ******    ******  ****   **   ****  ***          ***    
+		  ****        ****        ****   **** **** ****   ***   
+		  ****        ****************   **** **** ****   ****************
+		  ****        ****        ****   **************                ***
+		  ****        ****        ****    ************    ***          ***
+		  ****        ****        ****    ***  **  ***    ****************
+   		  ****        ****        ****    ***  **  ***    ****************
+	   Si ves esto, únete a TAWS! :)
+    -->
 	<head>
 		<title>TAWS Group</title>
 		<meta charset="UTF-8">
@@ -12,9 +24,9 @@
 		<link href="css/reset.css" rel="stylesheet" media="screen" type="text/css">
 		<link href="css/estilo.css" rel="stylesheet" media="screen" type="text/css">
 		<link rel="shortcut icon" href="./img/favicon.ico"/>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	</head>
 	<body>
-		<div id="background"><div>
 		<header>
 			<img src="img/logo.png"/>
 			<label>TAWS</label>
@@ -75,12 +87,12 @@
 					<div id="member-list">
 						<h4>Fundadora</h4>
 						<ul>
-							<li>Msc. Carmen Vaca</li>
+							<li>MSc. Carmen Vaca</li>
 						</ul>
 						<br>
 						<h4>Coordinadora</h4>
 						<ul>
-							<li>Msc. Vanessa Cede&ntilde;o</li>
+							<li>MSc. Vanessa Cede&ntilde;o</li>
 						</ul>
 						<div  id="members-engineer">
 							<h4> Graduados</h4>
@@ -204,10 +216,10 @@
 			</a>
 		</section>
 		<footer>&copy; 2014 TAWS</footer>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<div id="background">HOLAAAAAAAAAAAAAAAAAAAAAAAAAAA</div>
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="js/responsiveslides.min.js"></script>
 		<script type="text/javascript" src="js/functions.js"></script>
+		<script type="text/javascript" src="js/responsiveslides.min.js"></script>	
 		<script type="text/javascript" src="js/jquery-ui-1.8.23.custom.min.js"></script>
 		<script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
 		<script type="text/javascript" src="js/jquery.kinetic.js"></script>
