--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-	<!--
-	****************    ************    ***    **    ***  ****************
-	****************  ****************  ***    **    ***  ****************
-	      ****        ******    ******  ****   **   ****  ***          ***    
-		  ****        ****        ****   **** **** ****   ***   
-		  ****        ****************   **** **** ****   ****************
-		  ****        ****        ****   **************                ***
-		  ****        ****        ****    ************    ***          ***
-		  ****        ****        ****    ***  **  ***    ****************
-   		  ****        ****        ****    ***  **  ***    ****************
-	   Si ves esto, únete a TAWS! :)
-    -->
 	<head>
-		<title>TAWS Group</title>
+		<title>TAWS ESPOL</title>
 		<meta charset="UTF-8">
 		<meta http-equiv="content-type" content="text/html;">
 		<meta name="author" content="TAWS">
-		<meta name="description" content="Grupo de Investigación de Tecnologías Web y Móviles de la ESPOL">
+		<meta name="description" content="Grupo de Investigación de Tecnologías Web y Móviles de la FIEC">
 		<meta name="Keywords" content="HTML5, CSS3, Javascript, Jquery, TAWS, ESPOL, FIEC"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -34,7 +22,7 @@
 		<nav role="navigation">
 			<ul>
 				<li class="selected"><i class="fa fa-home"></i> <a href="#inicio">Inicio</a></li>
-				<li><i class="fa fa-info-circle"></i> <a href="#quienesSomos">Qui&eacute;nes Somos</a></li>
+				<li><i class="fa fa-info-circle"></i> <a href="#quienesSomos">Grupo</a></li>
 				<li><i class="fa fa-users"></i> <a href="#miembros">Miembros</a></li>
 				<li><i class="fa fa-book"></i> <a href="#investigacion">Investigaci&oacute;n</a></li>
 				<li><i class="fa fa-code"></i> <a href="#desarrollo">Desarrollo</a></li>
@@ -46,26 +34,25 @@
 			<div id="facebook" title="Facebook"><img src="img/facebook.png" width="100%" height="100%"/></div>
 			<div id="twitter" title="Twitter"><img src="img/twitter.png" width="100%" height="100%"/></div>
 			<div id="github" title="Github"><img src="img/github.png" width="100%" height="100%"/></div>
-			<div id="rss" title="RSS"><img src="img/rss.png" width="100%" height="100%"/></div>
 			<div id="blog" title="Blog"><img src="img/more.png" width="100%" height="100%"/></div>
 		</aside>
 		<section>
 			<a name="inicio">
 				<article id="page_one">
 					<img id="taws_home_img" src="img/taws.png" alt="TAWS">
-					<h1>Grupo de investigación de tecnolog&iacute;as web y m&oacute;viles de la <strong>ESPOL</strong></h1>
+					<h1>Grupo de investigación de tecnolog&iacute;as web y m&oacute;viles de la <br><strong>FIEC - ESPOL</strong></h1>
 				</article>
 			</a>
 			<a name="quienesSomos">
 				<article id="page_two">
-					<h2 class="numero">Qui&eacute;nes <br/> Somos</h2>
+					<h2 class="numero">Grupo</h2>
 					<p>
-						Somos un grupo de amigos,
-						estudiantes, graduados y profesores
-						que compartimos lo que aprendemos
-						en temas relacionados al desarrollo
-						de programas en la web y dispositivos
-						móviles.
+						TAWS es un grupo de estudiantes voluntarios
+						y graduados, con el propósito de contribuir 
+						a la formación de j&oacute;venes investigadores, 
+						precursores en el desarrollo de aplicaciones, 
+						fomentando el uso de nuevas 
+						tecnologías informáticas.
 					</p>
 					<div>
 						<ul class="rslides">
@@ -90,9 +77,10 @@
 							<li>MSc. Carmen Vaca</li>
 						</ul>
 						<br>
-						<h4>Coordinadora</h4>
+						<h4>Coordinador</h4>
 						<ul>
-							<li>MSc. Vanessa Cede&ntilde;o</li>
+							<li>MSc. Carlos Mera G&oacute;mez</li>
+							<!--<li>MSc. Vanessa Cede&ntilde;o</li>-->
 						</ul>
 						<div  id="members-engineer">
 							<h4> Graduados</h4>
@@ -108,22 +96,34 @@
 							</ul>
 						</div>
 						<div  id="members-student">
-							<h4>Estudiantes</h4>
+							<h4>Estudiantes activos</h4>
 							<ul>
-								<li>Denny K. Schuldt <a href="https://github.com/DenkSchuldt" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+								<li>Denny Schuldt <a href="http://denkschuldt.github.io/" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+								<li>Daniel Izquierdo <a href="https://www.facebook.com/breakdanz" target="_blank"><i class="fa fa-facebook"></i></a></li>
 								<li>Bryan Garcés <a href="https://twitter.com/brgarces" target="_blank"><i class="fa fa-twitter"></i></a></li>
-								<li>Estefanía Lozano <a href="https://www.facebook.com/onazol11" target="_blank"><i class="fa fa-facebook"></i></a></li>
 								<li>Jefferson Cunalata <a href="https://www.facebook.com/jefferson.cunalata" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li>Hernan Ullon <a href="https://github.com/hernan06" target="_blank"><i class="fa fa-github-alt"></i></a></li>
-								<li>José Bedón <a href="https://www.facebook.com/jose.bedon" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li>Juan Lucín <a href="https://twitter.com/jlucinf" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li>Estefanía Lozano <a href="https://www.facebook.com/onazol11" target="_blank"><i class="fa fa-facebook"></i></a></li>
+								<li>Hern&aacute;n Ull&oacute;n <a href="https://github.com/hernan06" target="_blank"><i class="fa fa-github-alt"></i></a></li>
 								<li>Jacqueline Ramos <a href="https://twitter.com/JackieRamosM" target="_blank"><i class="fa fa-twitter"></i></a></li>
+								<li>Gustavo Jarr&iacute;n</li>
+								<li>Freddy Lituma</li>
+							</ul>
+						</div>
+						<div  id="members-student">
+							<h4>Egresados</h4>
+							<ul>
+								<li>José Bedón <a href="https://www.facebook.com/jose.bedon" target="_blank"><i class="fa fa-facebook"></i></a></li>
 								<li>Nestor Naula</li>
-								<li>Angely Oyola</li>
-								<li>Xavier Villacres <a href="https://www.facebook.com/xavier.villa.921" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li>Mayra Moreira <a href="https://www.facebook.com/mayritaa18" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li>Alejandro Vinueza</li>
-								<li>Gianina Vallejo</li>
+							</ul>
+						</div>
+						<div  id="members-student">
+							<h4>Postulantes</h4>
+							<ul>
+								<li>Joseph Hern&aacute;ndez</li>
+								<li>Ricardo Maya</li>
+								<li>Steven Macías</li>
+								<li>Gabriela Paredes</li>
+								<li>Jean Vera</li>
 							</ul>
 						</div>
 					</div>
@@ -136,6 +136,7 @@
 							<li><img src="img/backbonejs.jpg" alt=""></li>
 							<li><img src="img/bootstrap.jpg" alt=""></li>
 							<li><img src="img/firefoxos.jpg" alt=""></li>
+							<li><img src="img/head.jpg" alt=""></li>
 							<li><img src="img/treejs.jpg" alt=""></li>
 						</ul>
 						<script>
@@ -157,13 +158,14 @@
 						<img src="img/sketchup_logo.png"/>
 						<img src="img/css3_logo.png"/>
 						<img src="img/firefox-os_logo.png"/>
-						<img src="img/backbone_logo.png"/>
+						<!--<img src="img/backbone_logo.png"/>
 						<img src="img/rails_logo.png"/>
 						<img src="img/ruby_logo.png"/>
-						<img src="img/android_logo.png"/>
-						<img src="img/java_logo.png"/>
 						<img src="img/play_logo.png"/>
 						<img src="img/php_logo.png"/>
+						-->
+						<img src="img/android_logo.png"/>
+						<img src="img/java_logo.png"/>
 					</div>
 				</article>
 			</a>
@@ -186,6 +188,11 @@
 							<p>Una de las mejores Universidades del Ecuador, ahora en 3D</p>
 							<a href="/geoespol/" target="_blank"><i class="fa fa-external-link"></i></a>
 						</div>
+						<div class="app">
+							<label>EspolTrek</label>
+							<p>Muy, muy pronto...</p>
+							<a href="#"><i class="fa fa-external-link"></i></a>
+						</div>
 					</div>
 				</article>
 			</a>
@@ -193,14 +200,6 @@
 				<article id="page_six">
 					<p class="numero">Contacto</p>
 					<div id="information">
-						<div class="contact" id="phone">
-							<h1><i class="fa fa-phone-square"></i></h1>
-							<p>593 (4) 2 269 852</p>
-						</div>
-						<div class="contact" id="skype">
-							<h1><i class="fa fa-skype"></i></h1>
-							<p>taws_espol</p>
-						</div>
 						<div class="contact" id="email">
 							<h1><i class="fa fa-envelope"></i></h1>
 							<p>taws@espol.edu.ec</p>
@@ -215,8 +214,8 @@
 				</article>
 			</a>
 		</section>
-		<footer>&copy; 2014 TAWS</footer>
-		<div id="background">HOLAAAAAAAAAAAAAAAAAAAAAAAAAAA</div>
+		<footer>&copy; 2014 TAWS - <a href="https://dl.dropboxusercontent.com/u/36615994/EstatutosTAWS.pdf" target="_blank">Estatutos</a></footer>
+		<div id="background"></div>
 		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
 		<script type="text/javascript" src="js/functions.js"></script>
 		<script type="text/javascript" src="js/responsiveslides.min.js"></script>	
@@ -232,5 +231,17 @@
 				});
 			});
 		</script>
+			<!--
+	****************   **************   ***    **    ***  ****************
+	****************  ****************  ***    **    ***  ****************
+	      ****        ******    ******  ****   **   ****  ***          ***    
+		  ****        ****        ****   **** **** ****   ***   
+		  ****        ****************   **** **** ****   ****************
+		  ****        ****        ****   **************                ***
+  		  ****        ****        ****    ************    ***          ***
+		  ****        ****        ****    ***  **  ***    ****************
+   		  ****        ****        ****    ***  **  ***    ****************
+	   Si ves esto, es una señal de que debes ser TAWS. ¡Únete! :)
+    -->
 	</body>
 </html>
